chore(npm): Normalize repo url

--- a/packages/codemods/package.json
+++ b/packages/codemods/package.json
@@ -4,7 +4,7 @@
   "description": "Codemods to ease upgrading a RedwoodJS Project",
   "repository": {
     "type": "git",
-    "url": "https://github.com/redwoodjs/redwood.git",
+    "url": "git+https://github.com/redwoodjs/redwood.git",
     "directory": "packages/codemods"
   },
   "license": "MIT",
