--- a/packages/framework-tools/package.json
+++ b/packages/framework-tools/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/redwoodjs/redwood.git",
+    "url": "git+https://github.com/redwoodjs/redwood.git",
     "directory": "packages/framework-tools"
   },
   "license": "MIT",
