--- a/packages/structure/package.json
+++ b/packages/structure/package.json
@@ -4,7 +4,7 @@
   "description": "noun: the arrangement of and relations between the parts or elements of something complex",
   "repository": {
     "type": "git",
-    "url": "https://github.com/redwoodjs/redwood.git",
+    "url": "git+https://github.com/redwoodjs/redwood.git",
     "directory": "packages/structure"
   },
   "license": "MIT",
