--- a/packages/web-server/package.json
+++ b/packages/web-server/package.json
@@ -4,7 +4,7 @@
   "description": "Redwood's server for the Web side",
   "repository": {
     "type": "git",
-    "url": "https://github.com/redwoodjs/redwood.git",
+    "url": "git+https://github.com/redwoodjs/redwood.git",
     "directory": "packages/web-server"
   },
   "license": "MIT",
