--- a/packages/auth-providers/supertokens/setup/src/templates/web/auth.rsc.tsx.template
+++ b/packages/auth-providers/supertokens/setup/src/templates/web/auth.rsc.tsx.template
@@ -1,3 +1,5 @@
+'use client'
+
 import SuperTokens, { SuperTokensWrapper } from 'supertokens-auth-react'
 import Session from 'supertokens-auth-react/recipe/session'
 import ThirdPartyEmailPassword, {
