--- a/packages/cli/src/commands/generate/cell/templates/mock.js.template
+++ b/packages/cli/src/commands/generate/cell/templates/mock.js.template
@@ -1,6 +1,7 @@
 // Define your own mock data here:
 export const standard = (/* vars, { ctx, req } */) => ({
   ${camelName}: {
+    __typename: "${singularPascalName}",
     ${idName}: ${mockIdValues[0]}
     }
   })
