--- a/packages/cli/src/commands/generate/cell/templates/mockList.js.template
+++ b/packages/cli/src/commands/generate/cell/templates/mockList.js.template
@@ -1,8 +1,14 @@
 // Define your own mock data here:
 export const standard = (/* vars, { ctx, req } */) => ({
   ${camelName}: [
-    { ${idName}: ${mockIdValues[0]} },
-    { ${idName}: ${mockIdValues[1]} },
-    { ${idName}: ${mockIdValues[2]} }
-  ]
+    {
+      __typename: "${singularPascalName}",
+      ${idName}: ${mockIdValues[0]} },
+    {
+      __typename: "${singularPascalName}",
+      ${idName}: ${mockIdValues[1]} },
+    {
+      __typename: "${singularPascalName}",
+      ${idName}: ${mockIdValues[2]} }
+    ]
   })
