change versions in fixtures

--- a/__fixtures__/example-todo-main-with-errors/web/package.json
+++ b/__fixtures__/example-todo-main-with-errors/web/package.json
@@ -3,8 +3,8 @@
   "name": "web",
   "version": "0.0.0",
   "dependencies": {
-    "@redwoodjs/router": "0.7.0",
-    "@redwoodjs/web": "0.7.0",
+    "@redwoodjs/router": "latest",
+    "@redwoodjs/web": "latest",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
