--- a/__fixtures__/example-todo-main/api/package.json
+++ b/__fixtures__/example-todo-main/api/package.json
@@ -3,6 +3,6 @@
   "name": "api",
   "version": "0.0.0",
   "dependencies": {
-    "@redwoodjs/api": "0.32.2"
+    "@redwoodjs/api": "latest"
   }
 }
