use canary instead

--- a/__fixtures__/empty-project/api/package.json
+++ b/__fixtures__/empty-project/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@redwoodjs/api": "latest",
-    "@redwoodjs/graphql-server": "latest"
+    "@redwoodjs/api": "canary",
+    "@redwoodjs/graphql-server": "canary"
   }
 }
