--- a/__fixtures__/example-todo-main-with-errors/package.json
+++ b/__fixtures__/example-todo-main-with-errors/package.json
@@ -5,7 +5,7 @@
     "web"
   ],
   "devDependencies": {
-    "@redwoodjs/core": "latest"
+    "@redwoodjs/core": "canary"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config"
