--- a/__fixtures__/example-todo-main/package.json
+++ b/__fixtures__/example-todo-main/package.json
@@ -6,7 +6,7 @@
     "../../packages/*"
   ],
   "devDependencies": {
-    "@redwoodjs/core": "latest"
+    "@redwoodjs/core": "canary"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config"
