--- a/__fixtures__/empty-project/web/package.json
+++ b/__fixtures__/empty-project/web/package.json
@@ -13,9 +13,9 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/forms": "latest",
-    "@redwoodjs/router": "latest",
-    "@redwoodjs/web": "latest",
+    "@redwoodjs/forms": "canary",
+    "@redwoodjs/router": "canary",
+    "@redwoodjs/web": "canary",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
