--- a/__fixtures__/example-todo-main-with-errors/api/package.json
+++ b/__fixtures__/example-todo-main-with-errors/api/package.json
@@ -3,6 +3,6 @@
   "name": "api",
   "version": "0.0.0",
   "dependencies": {
-    "@redwoodjs/api": "latest"
+    "@redwoodjs/api": "canary"
   }
 }
