--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,16 +26,13 @@
     "rwfw": "./dist/bins/rwfw.js"
   },
   "files": [
-    "config",
     "dist"
   ],
   "scripts": {
     "build": "yarn build:js",
     "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\"",
     "build:pack": "yarn pack -o redwoodjs-core.tgz",
-    "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "jest",
-    "test:watch": "yarn test --watch"
+    "prepublishOnly": "NODE_ENV=production yarn build"
   },
   "dependencies": {
     "@babel/cli": "7.24.5",
@@ -74,8 +71,7 @@
     "webpack-retry-chunk-load-plugin": "3.1.1"
   },
   "devDependencies": {
-    "@types/lodash": "4.17.5",
-    "jest": "29.7.0"
+    "@types/lodash": "4.17.5"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
 }
