--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,6 @@
   "dependencies": {
     "@babel/cli": "7.24.5",
     "@babel/runtime-corejs3": "7.24.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.13",
     "@redwoodjs/cli": "workspace:*",
     "@redwoodjs/eslint-config": "workspace:*",
     "@redwoodjs/internal": "workspace:*",
@@ -45,13 +44,9 @@
     "@redwoodjs/testing": "workspace:*",
     "@redwoodjs/web-server": "workspace:*",
     "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "11.0.0",
     "core-js": "3.37.1",
     "css-loader": "6.11.0",
-    "css-minimizer-webpack-plugin": "5.0.1",
-    "dotenv-webpack": "8.1.0",
     "graphql-tag": "2.12.6",
-    "html-webpack-plugin": "5.6.0",
     "lodash": "4.17.21",
     "mini-css-extract-plugin": "2.9.0",
     "nodemon": "3.1.3",
@@ -61,14 +56,7 @@
     "rimraf": "5.0.7",
     "style-loader": "3.3.4",
     "typescript": "5.4.5",
-    "url-loader": "4.1.1",
-    "webpack": "5.92.0",
-    "webpack-bundle-analyzer": "4.10.2",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.2",
-    "webpack-manifest-plugin": "5.0.0",
-    "webpack-merge": "5.10.0",
-    "webpack-retry-chunk-load-plugin": "3.1.1"
+    "url-loader": "4.1.1"
   },
   "devDependencies": {
     "@types/lodash": "4.17.5"
