--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:watch": "lerna run build:watch --parallel; tsc --build",
     "changesets": "tsx ./tasks/changesets/changesets.mts",
     "check": "node ./tasks/check/check.mjs",
+    "check:package": "nx run-many -t check:package --output-style static",
     "clean:prisma": "rimraf node_modules/.prisma/client && node node_modules/@prisma/client/scripts/postinstall.js",
     "e2e": "node ./tasks/run-e2e",
     "generate-dependency-graph": "node ./tasks/generateDependencyGraph.mjs",
