--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -131,10 +131,9 @@
     "build:types": "tsc --build --verbose ./tsconfig.build.json ./tsconfig.types-cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "concurrently npm:test:vitest npm:test:attw npm:test:publint",
-    "test:vitest": "vitest run",
-    "test:attw": "tsx ./attw.ts",
-    "test:publint": "yarn publint",
+    "check:package": "concurrently npm:check:attw yarn publint",
+    "test": "vitest run",
+    "check:attw": "tsx ./attw.ts",
     "test:types": "tstyche",
     "test:watch": "vitest watch"
   },
