--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -81,7 +81,7 @@
     "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "check:package": "concurrently npm:check:attw yarn publint",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "test": "vitest run",
     "check:attw": "tsx ./attw.ts",
     "test:watch": "vitest watch"
