--- a/packages/project-config/package.json
+++ b/packages/project-config/package.json
@@ -30,7 +30,7 @@
     "build:types": "tsc --build --verbose ./tsconfig.json ./tsconfig.types-cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "check:package": "concurrently npm:check:attw yarn publint",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "test": "vitest run",
     "check:attw": "yarn attw -P",
     "test:watch": "vitest watch"
