--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "dev": "tsx src/index.ts",
     "format": "prettier .",
     "lint": "eslint . --max-warnings 0",
     "lint:knip": "knip",
@@ -37,17 +38,13 @@
     "*": "prettier --ignore-unknown --write"
   },
   "dependencies": {
-    "@clack/prompts": "^0.7.0",
     "chalk": "5.3.0",
     "enquirer": "2.4.1",
     "execa": "9.3.0",
-    "listr2": "8.2.3",
     "node-fetch": "3.3.2",
     "semver": "7.6.3",
     "untildify": "5.0.0",
-    "unzipit": "1.4.3",
     "which": "4.0.0",
-    "yauzl": "3.1.3",
     "yauzl-promise": "4.0.0"
   },
   "devDependencies": {
@@ -57,7 +54,6 @@
     "@types/eslint-plugin-markdown": "^2.0.2",
     "@types/semver": "7.5.8",
     "@types/which": "3.0.4",
-    "@types/yauzl": "2.10.3",
     "@types/yauzl-promise": "4.0.1",
     "@vitest/coverage-v8": "^2.0.3",
     "console-fail-test": "^0.4.4",
