chore(router): Fix type errors in the link tests

--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -77,9 +77,9 @@
     }
   },
   "scripts": {
-    "build": "tsx ./build.mts && yarn build:types",
+    "build": "tsx ./build.ts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-router.tgz",
-    "build:types": "tsc --build --verbose",
+    "build:types": "tsc --build --verbose tsconfig.build.json",
     "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "check:attw": "tsx ./attw.ts",
@@ -99,6 +99,7 @@
     "@arethetypeswrong/cli": "0.15.3",
     "@babel/cli": "7.24.8",
     "@babel/core": "^7.22.20",
+    "@redwoodjs/framework-tools": "workspace:*",
     "@testing-library/jest-dom": "6.4.6",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
