--- a/packages/ogimage-gen/tsconfig.json
+++ b/packages/ogimage-gen/tsconfig.json
@@ -15,7 +15,7 @@
       "path": "../vite"
     },
     {
-      "path": "../router"
+      "path": "../router/tsconfig.build.json"
     },
     {
       "path": "../internal"
