--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -22,7 +22,7 @@
       "path": "../project-config"
     },
     {
-      "path": "../router"
+      "path": "../router/tsconfig.build.json"
     },
     {
       "path": "../server-store"
