--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -52,6 +52,7 @@
     "pascalcase": "1.0.0",
     "prettier": "3.3.3",
     "prompts": "2.4.2",
+    "semver": "7.6.3",
     "smol-toml": "1.3.0",
     "terminal-link": "2.1.1"
   },
@@ -60,6 +61,7 @@
     "@types/dotenv-defaults": "^2.0.4",
     "@types/lodash": "4.17.7",
     "@types/pascalcase": "1.0.3",
+    "@types/semver": "^7",
     "@types/yargs": "17.0.32",
     "tsx": "4.16.2",
     "typescript": "5.5.3",
