--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -93,6 +93,7 @@
     "vite": "5.3.5",
     "vite-plugin-cjs-interop": "2.1.1",
     "vite-plugin-node-polyfills": "0.22.0",
+    "ws": "8.18.0",
     "yargs-parser": "21.1.1"
   },
   "devDependencies": {
@@ -103,6 +104,7 @@
     "@types/express": "4",
     "@types/fs-extra": "11.0.4",
     "@types/react": "^18.2.55",
+    "@types/ws": "^8",
     "@types/yargs-parser": "21.0.3",
     "concurrently": "8.2.2",
     "glob": "11.0.0",
