--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -40,6 +40,7 @@
   },
   "bin": {
     "rw-dev-fe": "./dist/devFeServer.js",
+    "rw-dev-rsc": "./dist/devRscServer.js",
     "rw-serve-fe": "./dist/runFeServer.js",
     "rw-vite-build": "./bins/rw-vite-build.mjs",
     "rw-vite-dev": "./bins/rw-vite-dev.mjs",
@@ -76,9 +77,11 @@
     "acorn-loose": "8.4.0",
     "buffer": "6.0.3",
     "busboy": "^1.6.0",
+    "chokidar": "3.6.0",
     "cookie": "0.6.0",
     "core-js": "3.37.1",
     "dotenv-defaults": "5.0.2",
+    "execa": "5.1.1",
     "express": "4.19.2",
     "find-my-way": "8.2.0",
     "fs-extra": "11.2.0",
@@ -86,6 +89,7 @@
     "isbot": "5.1.13",
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
+    "rimraf": "6.0.1",
     "vite": "5.3.5",
     "vite-plugin-cjs-interop": "2.1.1",
     "vite-plugin-node-polyfills": "0.22.0",
