--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,17 +43,12 @@
     "@redwoodjs/project-config": "workspace:*",
     "@redwoodjs/testing": "workspace:*",
     "@redwoodjs/web-server": "workspace:*",
-    "babel-loader": "^9.1.3",
     "graphql-tag": "2.12.6",
     "lodash": "4.17.21",
-    "mini-css-extract-plugin": "2.9.0",
     "nodemon": "3.1.4",
-    "null-loader": "4.0.1",
     "react-refresh": "0.14.0",
-    "resolve-url-loader": "5.0.0",
     "rimraf": "6.0.1",
-    "typescript": "5.5.4",
-    "url-loader": "4.1.1"
+    "typescript": "5.5.4"
   },
   "devDependencies": {
     "@redwoodjs/framework-tools": "workspace:*",
